# Utils

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/lulcek/: main.cpp
include/Colors/: Colors.h  Font.h  HSV.h  RGB.h
include/File/: File.h
include/Logging/: Logger.h
include/Math/: Curve.h  Maths.h
include/Network/: Client.h  Connection.h  IP.h  Interfaces.h  SACN.h
include/Regex/: Matcher.h
include/Storage/: FragmentedStorage.h
include/Text/: Stream.h  String.h
include/Time/: Time.h  Timer.h
include/Traits/: Stringify.h
src/: main.cpp
src/Colors/: Colors.cpp  Colors.h  Font.cpp  HSV.cpp  RGB.cpp
src/File/: File.cpp
src/Logging/: Logger.cpp
src/Math/: Curve.cpp  Maths.cpp  Maths.h
src/Network/: IP.cpp  Interfaces.cpp  SACN.cpp
src/Regex/: AST.cpp  AST.h  Matcher.cpp  Matcher.h  README.md  Syntax.cpp  Syntax.h  Token.h  Tokenizer.cpp  Tokenizer.h  regex.syn
src/Regex/Engine/: AST.cpp  AST.h  Syntax.cpp  Syntax.h  Token.h  Tokenizer.cpp  Tokenizer.h
src/Storage/: FragmentedStorage.cpp
src/Text/: Font.cpp  Font.h  LineCounter.cpp  LineCounter.h  Stream.h  String.cpp  String.h
src/Time/: Timer.cpp
src/regex/: ast.cpp  ast.h  regex.cpp  regex.h  syntax.cpp  syntax.h  token.h  tokenizer.cpp  tokenizer.h
